dev/composables/composable-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composable-ui
  namespace: composables
  labels:
    app: composable-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: composable-ui
  template:
    metadata:
      labels:
        app: composable-ui
        app.kubernetes.io/part-of: soludev-workload
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: composable-ui
          image: kaiohz/pickpro:composable-ui-211359e9f94b76ef6d4770ea768531a6a929b59e
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "96Mi"
      volumes:
        - name: config-volume
          configMap:
            name: composable-ui-config
      imagePullSecrets:
        - name: pickpro-docker-secret
