dev/composables/composable-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: composable-ui
  namespace: composables
spec:
  selector:
    app: composable-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
